--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nod/webpack-config-presets",
-  "version": "2.0.4-alpha.0",
+  "version": "2.0.5-0",
   "description": "Reusable and composable webpack presets",
   "main": "./build/main.js",
   "module": "./src/index.js",
@@ -18,7 +18,7 @@
     "test": "react-scripts test"
   },
   "devDependencies": {
-    "@nod/debug-with-package-name": "^2.0.4-alpha.0",
+    "@nod/debug-with-package-name": "^2.0.5-0",
     "backpack-core": "^0.7.0",
     "flow-bin": "^0.78.0",
     "flow-runtime": "^0.17.0",
